@@ -56,6 +56,7 @@ import org.jkiss.dbeaver.model.text.TextUtils;
 import org.jkiss.dbeaver.model.text.parser.TPRuleBasedScanner;
 import org.jkiss.dbeaver.model.text.parser.TPToken;
 import org.jkiss.dbeaver.model.text.parser.TPTokenAbstract;
+import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 import org.jkiss.utils.Pair;
@@ -78,6 +79,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
     public static final int MAX_ATTRIBUTE_VALUE_PROPOSALS = 50;
     public static final int MAX_STRUCT_PROPOSALS = 100;
     private final SQLCompletionRequest request;
+    private final LSMTableReferencesAnalyzer tableRefsAnalyzer;
     private DBRProgressMonitor monitor;
 
     private final List<SQLCompletionProposalBase> proposals = new ArrayList<>();
@@ -86,6 +88,20 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
 
     public SQLCompletionAnalyzer(SQLCompletionRequest request) {
         this.request = request;
+
+        final DBPPreferenceStore prefStore;
+        final DBPDataSource dataSource = request.getContext().getDataSource();
+        if (dataSource != null) {
+            prefStore = request.getContext().getDataSource().getContainer().getPreferenceStore();
+        } else {
+            prefStore = DBWorkbench.getPlatform().getPreferenceStore();
+        }
+
+        if (prefStore.getBoolean(ENABLE_EXPERIMENTAL_FEATURES)) {
+            tableRefsAnalyzer = new TableReferencesAnalyzer();
+        } else {
+            tableRefsAnalyzer = new TableReferencesAnalyzerOld();
+        }
     }
 
     @Override
@@ -118,6 +134,13 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         String prevKeyWord = wordDetector.getPrevKeyWord();
         boolean isPrevWordEmpty = CommonUtils.isEmpty(wordDetector.getPrevWords());
         String prevDelimiter = wordDetector.getPrevDelimiter();
+        // Here we handle the case when user started typing the new query on the next line without query delimiter for the previous one.
+        // If setting `Blank line is statement delimiter` set, then active query is only newly typed characters
+        // and prev word can't exist in this new query - offset of prev word doesn't fit active query offset, so we set it accordingly.
+        if (request.getActiveQuery() == null || wordDetector.getPrevKeyWordOffset() < request.getActiveQuery().getOffset()) {
+            prevKeyWord = null;
+            isPrevWordEmpty = true;
+        }
         {
             if (!CommonUtils.isEmpty(prevKeyWord)) {
                 if (syntaxManager.getDialect().isEntityQueryWord(prevKeyWord)) {
@@ -545,6 +568,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                                     monitor,
                                     refAttribute,
                                     null,
+                                    null,
                                     Collections.emptyList(),
                                     true,
                                     true,
@@ -680,8 +704,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
             if (wordPart.indexOf(request.getContext().getSyntaxManager().getStructSeparator()) != -1 || wordPart.equals(ALL_COLUMNS_PATTERN)) {
                 return;
             }
-            final DBPPreferenceStore prefStore = request.getContext().getDataSource().getContainer().getPreferenceStore();
-            final List<Pair<String, String>> names = extractTableNames(wordPart, true, prefStore);
+            final List<Pair<String, String>> names = tableRefsAnalyzer.getFilteredTableReferences(wordPart, true);
             for (Pair<String, String> name : names) {
                 final String tableName = name.getFirst();
                 final String tableAlias = name.getSecond();
@@ -696,7 +719,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             null,
                             false,
                             null,
-                            Collections.emptyMap())
+                            Map.of(SQLCompletionProposalBase.PARAM_NO_SPACE, true))
                     );
                 }
                 if (!CommonUtils.isEmpty(tableAlias) && !hasProposal(proposals, tableAlias)) {
@@ -710,7 +733,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             null,
                             false,
                             null,
-                            Collections.emptyMap())
+                            Map.of(SQLCompletionProposalBase.PARAM_NO_SPACE, true))
                     );
                 }
             }
@@ -935,7 +958,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
             token = token.substring(0, token.length() - 1);
         }
 
-        final List<Pair<String, String>> names = extractTableNames(token, false, dataSource.getContainer().getPreferenceStore());
+        final List<Pair<String, String>> names = tableRefsAnalyzer.getFilteredTableReferences(token, false);
         for (Pair<String, String> name : names) {
             if (name != null && CommonUtils.isNotEmpty(name.getFirst())) {
                 final String[][] quoteStrings = sqlDialect.getIdentifierQuoteStrings();
@@ -951,63 +974,68 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         this.checkNavigatorNodes = check;
     }
 
-    private enum InlineState {
-        UNMATCHED,
-        TABLE_NAME,
-        TABLE_DOT,
-        ALIAS_AS,
-        ALIAS_NAME,
-        MATCHED
-    };
-
-    @NotNull
-    private List<Pair<String, String>> extractTableNames(
-        @Nullable String tableAlias,
-        boolean allowPartialMatch,
-        @NotNull DBPPreferenceStore preferenceStore
-    ) {
-        List<Pair<String, String>> tableRefs = new ArrayList<>();
-        if (preferenceStore.getBoolean(ENABLE_EXPERIMENTAL_FEATURES)) {
-            tableRefs = newExtractTableNames(tableAlias, allowPartialMatch);
-        } else {
-            tableRefs = oldExtractTableNames(tableAlias, allowPartialMatch);
-        }
-        return tableRefs; 
+    private interface LSMTableReferencesAnalyzer {
+        @NotNull
+        List<Pair<String, String>> getFilteredTableReferences(@NotNull String tableAlias, boolean allowPartialMatch);
     }
-    
-    @NotNull
-    private List<Pair<String, String>> newExtractTableNames(@Nullable String tableAlias, boolean allowPartialMatch) {
-        final SQLScriptElement activeQuery = request.getActiveQuery();
-        if (activeQuery == null) {
-            return Collections.emptyList();
+
+    private class TableReferencesAnalyzer implements LSMTableReferencesAnalyzer {
+
+        List<Pair<String, String>> tableReferences;
+
+        private void prepareTableReferences() {
+            final SQLScriptElement activeQuery = request.getActiveQuery();
+            if (activeQuery == null) {
+                tableReferences = Collections.emptyList();
+                return;
+            }
+            try {
+                STMSource querySource = STMSource.fromReader(new StringReader(activeQuery.getText()));
+                LSMAnalyzer analyzer = LSMDialectRegistry.getInstance().getAnalyzerForDialect(
+                    request.getContext().getDataSource().getSQLDialect()
+                );
+                STMTreeRuleNode tree = analyzer.parseSqlQueryTree(querySource, new STMSkippingErrorListener());
+                tableReferences = getTableAndAliasFromSources(tree);
+                // log.debug("Extracted table names: " + tableReferences);
+            } catch (Exception e) {
+                log.debug("Failed to extract table names from query", e);
+                tableReferences = Collections.emptyList();
+            }
         }
-        List<Pair<String, String>> tableRefs = new ArrayList<>();
-        try {
-            STMSource querySource = STMSource.fromReader(new StringReader(activeQuery.getText()));
-            LSMAnalyzer analyzer = LSMDialectRegistry.getInstance().getAnalyzerForDialect(
-                request.getContext().getDataSource().getSQLDialect()
-            );
-            STMTreeRuleNode tree = analyzer.parseSqlQueryTree(querySource, new STMSkippingErrorListener());
-            tableRefs = getTableAndAliasFromSources(tree);
-        } catch (Exception e) {
-            log.debug("Failed to extract table names from query", e);
-            return Collections.emptyList();
+
+        @NotNull
+        @Override
+        public List<Pair<String, String>> getFilteredTableReferences(@NotNull String tableAlias, boolean allowPartialMatch) {
+            List<Pair<String, String>> result;
+            if(tableReferences == null) {
+                prepareTableReferences();
+            }
+            if (CommonUtils.isNotEmpty(tableAlias) && tableReferences != null && tableReferences.size() > 0) {
+                result = tableReferences.stream().filter(r -> allowPartialMatch 
+                    ? r.getSecond() != null && CommonUtils.startsWithIgnoreCase(r.getSecond(), tableAlias)
+                    : r.getSecond() != null && r.getSecond().equalsIgnoreCase(tableAlias)
+                ).collect(Collectors.toList());
+                // log.debug("Matched ("+(allowPartialMatch ? "partial" : "exact")+") table names: " + tableReferences);
+            } else {
+                result = tableReferences;
+            }
+            return result;
         }
-        log.debug("Extracted table names: " + tableRefs);
-        if (CommonUtils.isNotEmpty(tableAlias) && tableRefs != null) {
-            tableRefs = tableRefs.stream().filter(r -> allowPartialMatch 
-                ? r.getSecond() != null && CommonUtils.startsWithIgnoreCase(r.getSecond(), tableAlias)
-                : r.getSecond() != null && r.getSecond().equalsIgnoreCase(tableAlias)
-            ).collect(Collectors.toList());
-            // log.debug("Matched ("+(allowPartialMatch ? "partial" : "exact")+") table names: " + tableRefs);
+
+    }
+
+    private class TableReferencesAnalyzerOld implements LSMTableReferencesAnalyzer {
+        @NotNull
+        @Override
+        public List<Pair<String, String>> getFilteredTableReferences(@NotNull String tableAlias, boolean allowPartialMatch) {
+            return oldExtractTableNames(tableAlias, allowPartialMatch);
         }
-        return tableRefs;
+
     }
     
     private interface TableNameExtractionUtils { 
         public static final Set<String> expandRulesToTableRef = Set.of(
-            STMKnownRuleNames.sqlQuery, 
-            STMKnownRuleNames.directSqlStatement, 
+            STMKnownRuleNames.sqlQuery,
             STMKnownRuleNames.directSqlDataStatement, 
             STMKnownRuleNames.selectStatement, 
             STMKnownRuleNames.queryExpression, 
@@ -1064,6 +1092,15 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         }
         return result;
     }
+    
+    private enum InlineState {
+        UNMATCHED,
+        TABLE_NAME,
+        TABLE_DOT,
+        ALIAS_AS,
+        ALIAS_NAME,
+        MATCHED
+    };
     
     @NotNull
     private List<Pair<String, String>> oldExtractTableNames(@Nullable String tableAlias, boolean allowPartialMatch) {
@@ -1454,8 +1491,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             if (aliases.contains(s) || sqlDialect.getKeywordType(s) != null) {
                                 return true;
                             }
-                            final DBPPreferenceStore prefStore = request.getContext().getDataSource().getContainer().getPreferenceStore();
-                            return !extractTableNames(s, false, prefStore).isEmpty();
+                            return !tableRefsAnalyzer.getFilteredTableReferences(s, false).isEmpty();
                         });
                         if (alias.equalsIgnoreCase(object.getName())) {
                             // Don't use alias, when it's identical to entity name
